--- a/index.html
+++ b/index.html
@@ -3,21 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/usuario.css">
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <img src="" alt="Logo">
-        <h1>Supermercado Alegria</h1>
-        <h3>Control de stock</h3>
-    </header>
-    <section>
-        <form>
-            <input type="text" class="input-usuario" placeholder="Usuario">
-            <input type="password" class="input-contraseña" placeholder="Contraseña">
-            <button>Iniciar Sesión</button>
-            <button><a href="registro.html">Registrarse</a></button>
-        </form>
-    </section>
+    <div class="container-all" id="inicio-sesion">
+        <header>
+            <img src="" alt="Logo">
+            <h1>Supermercado Alegria</h1>
+            <h3>Control de stock</h3>
+        </header>
+        <section>
+            <form>
+                <input type="text" id="usuario" placeholder="Usuario"><br>
+                <input type="password" id="contraseña" placeholder="Contraseña">
+                <div class="botones">
+                    <button id="btn-inicio-sesion" class="btn btn-success">Iniciar Sesión</button>
+                    <a href="registro.html" class="btn btn-warning">Registrarse</a>
+                </div>
+                <span id="cartel-error"></span>
+            </form>
+        </section>
+    </div>
+    <!-- JS -->
+    <script src="js/inicio-sesion.js"></script>
 </body>
 </html>
