--- a/productos.html
+++ b/productos.html
@@ -6,8 +6,7 @@
     <title>Productos</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css
-    ">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container" id="contenido"></div>
@@ -15,12 +14,19 @@
         <input type="text" id="nombre" placeholder="nombre">
         <input type="number" id="cantidad" placeholder="cantidad">
         <input type="number" id="precio" placeholder="precio">
-        <button class="btn btn-success" type="submit" onclick="guardarProducto(event)">Guardar</button>
+        <button class="btn btn-success" type="submit" onclick="guardarProductos(event)">Guardar</button>
     </form>
 
-    <table class="table table-bordered" id="table"></table>
+    <table class="table table-bordered" id="table">
+        <tr>
+            <th>nombre</th>
+            <th>cantidad</th>
+            <th>precio</th>
+            <th>Acción</th>
+        </tr>
+    </table>
 
-    <!-- <button class="btn btn-info" onclick="mostrarProductos()">Mostrar</button> -->
+    <button class="btn btn-info" onclick="mostrarProductos()">Mostrar</button>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="js/index.js"></script>
 </body>
