--- a/registro.html
+++ b/registro.html
@@ -1,20 +1,28 @@
-git push -u origin main <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/usuario.css">
     <title>Document</title>
 </head>
 <body>
-    <section>
-        <h3>Ingresa los siguientes datos:</h3>
-        <form>
-            <input type="text" class="input-registro-usuario" placeholder="Usuario">
-            <input type="text" class="input-registro-contraseña" placeholder="Contraseña">
-            <input type="text" class="input-registro-confirma-contraseña" placeholder="Confirmar contraseña">
-            <button>Registrarse</button>
-        </form>
-        <span>Ya tienes un usuario? <a href="index.html">Iniciá sesión</a></span>
-    </section>
+    <div class="container-all" id="registro">
+        <section>
+            <h3>Ingresa los siguientes datos:</h3>
+            <form>
+                <input type="text" id="usuario" placeholder="Usuario">
+                <input type="password" id="contraseña" placeholder="Contraseña">
+                <input type="password" id="confirmacion-contraseña" placeholder="Confirmar contraseña">
+                <button id="btn-registro" class="btn btn-success">Registrarse</button>
+                <span id="cartel-error"></span>
+            </form>
+            <span>Ya tienes un usuario? <a href="index.html">Iniciá sesión</a></span>
+        </section>
+    </div>
+
+    <!-- JS -->
+    <script src="js/registro.js"></script>
 </body>
 </html>
