--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/usuario.css">
-    <title>Document</title>
+    <title>Supermercado Alegria - Inicio</title>
 </head>
 <body>
     <div class="container-all" id="inicio-sesion">
         <header>
-            <img src="" alt="Logo">
-            <h1>Supermercado Alegria</h1>
-            <h3>Control de stock</h3>
+            <nav class="nav-bar">
+                <img class="logo" src="imagenes/logo.png" alt="logo">
+                <div class="nav-info">
+                    <h1 class="titulo-pag">Supermercado alegria</h1>
+                    <p class="subtitulo-pag">Tene tu stock al día</p>
+                </div>
+            </nav>
         </header>
         <section>
             <form>
@@ -26,6 +31,7 @@
             </form>
         </section>
     </div>
+
     <!-- JS -->
     <script src="js/inicio-sesion.js"></script>
 </body>
