--- a/registro.html
+++ b/registro.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/usuario.css">
-    <title>Document</title>
+    <title>Supermercado Alegria - Registro</title>
 </head>
 <body>
     <div class="container-all" id="registro">
@@ -18,7 +18,7 @@
                 <button id="btn-registro" class="btn btn-success">Registrarse</button>
                 <span id="cartel-error"></span>
             </form>
-            <span>Ya tienes un usuario? <a href="index.html">Iniciá sesión</a></span>
+            <span class="hay-usuario">Ya tienes un usuario? <a href="index.html">Iniciá sesión</a></span>
         </section>
     </div>
 
