--- a/cargar-productos.html
+++ b/cargar-productos.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Cargar productos</title>
 </head>
@@ -12,14 +14,14 @@
         <nav class="nav-bar">
             <img class="logo" src="imagenes/logo.png" alt="logo">
             <ul class="nav-bar-items">
-                <li><a href="">Cargar productos</a></li>
+                <li><a href="" data-toggle="modal" data-target="#exampleModal">Cargar productos</a></li>
                 <li><a href="">Productos</a></li>
             </ul>
         </nav>
         <h1 class="titulo-pag">Supermercado alegria</h1>
         <p class="subtitulo-pag">Tene tu stock al día</p>
     </header>
-    <section class="pag-content">
+    <!-- <section class="pag-content">
         <h2>Agregar productos</h2>
         <form class="agregar-produc-form" action="" method="">
             <label for="name">Nombre del producto:</label><br>
@@ -33,14 +35,53 @@
 
             <button class="btn-cargar" type="submit" onclick="guardarProducto(event)">Cargar</button>
         </form>
-    </section>
+    </section> -->
     <section>
         <table class="table table-bordered" id="table"></table>
     </section>
 
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Agregar productos</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form class="agregar-produc-form" action="" method="">
+                        <label for="name">Nombre del producto:</label><br>
+                        <input type="text" id="nombre" name="name"><br>
+                    
+                        <label for="cantidad">Cantidad:</label><br>
+                        <input type="number" id="cantidad" name="cantidad"><br>
+                    
+                        <label for="Precio">Precio:</label><br>
+                        <input type="number" id="precio" name="precio" placeholder="$"><br>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-success" onclick="guardarProducto(event)" data-dismiss="modal">Guardar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
-        <!-- <button class="btn btn-info" onclick="mostrarProductos()">Mostrar</button> -->
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
