--- a/registro.html
+++ b/registro.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/usuario.css">
     <title>Supermercado Alegria - Registro</title>
 </head>
 <body>
     <div class="container-all" id="registro">
+        <header>
+            <nav class="nav-bar">
+                <img class="logo" src="imagenes/logo.png" alt="logo">
+                <div class="nav-info">
+                    <h1 class="titulo-pag">Supermercado alegria</h1>
+                    <p class="subtitulo-pag">Tene tu stock al día</p>
+                </div>
+            </nav>
+        </header>
         <section>
             <h3>Ingresa los siguientes datos:</h3>
             <form>
