--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <nav class="nav-bar">
                 <img class="logo" src="imagenes/logo.png" alt="logo">
                 <div class="nav-info">
-                    <h1 class="titulo-pag">Supermercado alegria</h1>
-                    <p class="subtitulo-pag">Tene tu stock al día</p>
+                    <h1 class="titulo-pag titulo-pag2">Supermercado alegria</h1>
+                    <p class="subtitulo-pag subtitulo-pag2">Tene tu stock al día</p>
                 </div>
             </nav>
         </header>
