--- a/productos.html
+++ b/productos.html
@@ -6,6 +6,7 @@
     <title>Productos</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="icon" type="image/png" href="Imagenes/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
