--- a/cargar-productos.html
+++ b/cargar-productos.html
@@ -17,7 +17,7 @@
             <img class="logo" src="imagenes/logo.png" alt="logo">
             <ul class="nav-bar-items">
                 <li><a href="" data-toggle="modal" data-target="#exampleModal">Cargar productos</a></li>
-                <li><a href="index.html" onclick="exit()">Cerrar Sesión</a></li>
+                <li><a href="index.html" onclick="exit()" class="cerrar-sesion">Cerrar Sesión</a></li>
             </ul>
         </nav>
         <h1 class="titulo-pag">Supermercado alegria</h1>
